shortened build script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,6 @@ name: build
 
 on:
   push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -10,17 +9,13 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  macos:
-    runs-on: macOS-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build and test
-        run: cargo test --verbose
-      - name: Build for release
-        run: cargo build --verbose --release
-      
-  linux:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ${{ matrix.config.os }}
+    strategy:
+      matrix:
+        config:
+          - os: ubuntu-latest
+          - os: macOS-latest
     steps:
       - uses: actions/checkout@v2
       - name: Build and test
