--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ csv = "1.1"
 regex = "1.6"
 lazy_static = "1.4.0"
 serde_json = "1.0"
+parquet = "22.0.0"
 
 [dependencies.uuid]
 version = "1.1.2"
