--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "verticareader"
-version = "1.4.0"
+version = "1.5.0"
 authors = ["Joey Gibson <joey@joeygibson.com>"]
 edition = "2018"
 description = "A program to read Vertica native binary files and convert them to CSV."
@@ -19,6 +19,7 @@ csv = "1.1"
 regex = "1.6"
 lazy_static = "1.4.0"
 serde_json = "1.0"
+flate2 = "1.0"
 
 [dependencies.uuid]
 version = "1.1.2"
