--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Identify Build Specs
+        run: cargo --version && uname -a
       - name: Build and test
         run: cargo test --verbose
       - name: Build for release
