--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "verticareader"
-version = "1.10.1"
+version = "1.11.0"
 authors = ["Joey Gibson <joey@joeygibson.com>"]
 edition = "2018"
 description = "A program to read Vertica native binary files and convert them to CSV."
@@ -20,6 +20,7 @@ regex = "1.6"
 lazy_static = "1.4.0"
 serde_json = "1.0"
 flate2 = "1.0"
+anyhow = "1.0"
 
 [dependencies.uuid]
 version = "1.1.2"
